--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,3 +1,5 @@
+@import 'variables.scss';
+
 .App {
   text-align: center;
 }
@@ -9,7 +11,6 @@
 }
 
 .App-header {
-  // background-color: #282c34;
   background-image: linear-gradient(120deg, #f6f9fc 0%, #e3ebf5 100%);
   min-height: 100vh;
   display: flex;
@@ -27,6 +28,10 @@
     color: #9FA8DA;
     margin-top: 0;
   }
+}
+
+.App-content {
+  padding-bottom: 120px;
 }
 
 .App-link {
