--- a/src/scss/Button.scss
+++ b/src/scss/Button.scss
@@ -1,14 +1,19 @@
+@import 'variables.scss';
+
 .Button {
   background-color: #1A237E;
   border: none;
   border-radius: 4px;
   color: white;
+  font-size: 15px;
   line-height: 48px;
   margin-top: 12px;
   outline: none;
   padding: 0 32px;
+  transition: all .1s;
 
   &:hover {
+    box-shadow: 0 2px 4px rgba($color-primary,.4), 0 2px 8px rgba($color-primary,.4);
     cursor: pointer;
   }
 }
