--- a/src/scss/Searchbox.scss
+++ b/src/scss/Searchbox.scss
@@ -1,3 +1,5 @@
+@import 'variables.scss';
+
 .Searchbox-input-group {
   position: relative;
 }
@@ -5,6 +7,9 @@
 .Searchbox-input {
   border: none;
   border-radius: 4px;
+  box-shadow: 0 1px 3px rgba($color-primary,.1);
+  color: $color-tertiary;
+  font-size: 15px;
   line-height: 48px;
   margin-bottom: 12px;
   outline: none;
