--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,3 +1,7 @@
 .light-gradient {
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
+
+$color-primary: #1A237E;
+$color-secondary: #9FA8DA;
+$color-tertiary: #263238;
